# ComputerGraphics

./: CMakeLists.txt  README.md
include/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
src/: CMakeLists.txt  main.cpp
